Sat Dec  8 13:17:55 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (top_using): raise a RuntimeError if using is called in a
	  module definition or a method definition.

	* test/ruby/test_refinement.rb: related test.

Sat Dec  8 15:01:35 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/cleanup_command.rb:  Skip default gems when
	  cleaning up.
	* test/rubygems/test_gem_commands_cleanup_command.rb:  Test for above.

	* lib/rubygems/commands/query_command.rb:  Fixed listing remote gems.

	* lib/rubygems/dependency_installer.rb:  Ignore non-files when looking
	  for local gems.
	* test/rubygems/test_gem_dependency_installer.rb:  Test for above.

	* lib/rubygems/uninstaller.rb:  The user must confirm uninstalling gems
	  that have dependencies.
	* test/rubygems/test_gem_uninstaller.rb:  Test for above.

	* lib/rubygems.rb (module Gem):  Updated version.

	* test/rubygems/*.pem:  Updated to run in FIPS mode.
	* test/rubygems/test_gem_security.rb:  ditto.
	* test/rubygems/test_gem_security_signer.rb:  ditto.

Sat Dec  8 12:34:01 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_search_normal_superclass): super in a
	  refinement always uses the refined class as its superclass.

	* test/ruby/test_refinement.rb: related test.

Sat Dec  8 11:59:59 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): raise an ArgumentError if a given
	  block is of a Proc object.

	* vm_insnhelper.c (vm_call_method): store refined methods in inline
	  cache to improve performance.  It's safe now because blocks cannot
	  be yielded with different refinements in the new specification.

	* test/ruby/test_refinement.rb: related test.

Sat Dec  8 11:17:53 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine), vm_eval.c (rb_yield_refine_block): 
	  Module#refine activates all refinements defined in that module
	  only in a given block.

	* string.c (sym_to_proc, sym_call): don't use refinements.
